# megatech-assertions

./: .gitignore  Doxyfile  README.md  meson.build  meson.options  requirements.txt
documentation/: namespaces.dox
include/megatech/: assertions.hpp
src/megatech/: assertions.cpp
tests/: meson.build  test-runner.py  test_assert_fail.cpp  test_assert_msg_fail.cpp  test_assert_msg_fail_disable_format.cpp  test_assert_msg_fail_format.cpp  test_assert_msg_fail_format_error.cpp  test_assert_msg_fail_printf.cpp  test_assert_pass.cpp  test_disable_assertions.cpp  test_parallel_assert_msg_fail.cpp  test_postcondition_is_assert.cpp  test_postcondition_msg_is_assert_msg.cpp  test_precondition_is_assert.cpp  test_precondition_msg_is_assert_msg.cpp  test_truncate_assert_msg_fail_format.cpp  test_truncate_assert_msg_fail_printf.cpp
